nginx-gateway/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
  labels:
    app.kubernetes.io/part-of: gateway-api
