nginx-gateway/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      hostname: demo.example.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
