nginx-gateway/05-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lyh-app-route
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: shared-gateway
  hostnames:
    - demo.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: was
          namespace: lyh-ns
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          namespace: lyh-ns
          port: 80
